添加vm参数